fixed weird flicker on lazyloaded img (should implement blur-up plugin...)

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -22,20 +22,11 @@ $animLen: 0.2s;
 }
 
 // Lazyloaded images fade-in
-img.lazyloaded {
-  opacity: 0;
-  animation-name: fadein;
-  animation-duration: .5s;
-  animation-iteration-count: 1;
-  animation-fill-mode: forwards;
-  animation-direction: normal;
-  animation-timing-function: ease-out;
-  @keyframes fadein {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
+.lazyload,
+.lazyloading {
+	opacity: 0;
+}
+.lazyloaded {
+  opacity: 1;
+	transition: opacity 300ms;
 }
